tests/snapshots/integration_test__no_op_config_succeeds-2.snap
---
source: tests/integration_test.rs
expression: "std::str::from_utf8(&output.stdout)?.lines().collect::<Vec<_>>()"

---
- ok No lint issues.

