tests/snapshots/integration_test__no_op_config_succeeds.snap
---
source: tests/integration_test.rs
expression: "std::str::from_utf8(&output.stderr)?.lines().collect::<Vec<_>>()"

---
[]

