tests/snapshots/integration_test__simple_linter_fails_on_nonexistent_file.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error:        Failed to lint provided file: 'blahblahblah'"
- "caused_by:             No such file or directory (os error 2)"

