tests/snapshots/integration_test__skip_nonexistent_linter.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error:        Unknown linter specified in --skip: MENOEXIST. These linters are available: {\"TESTLINTER\"}"

